package domainapp.modules.simple.enfermero;

public class EnfermeroMenu {
}
