package domainapp.modules.simple.paciente;

public enum HabitacionSeleccionada {
    Individual,
    Doble,
    Triple
}
