package domainapp.modules.simple.paciente;

public enum TipoDocumento {

    DNI,Libreta_civica,Libreta_de_enrolamiento
}
